--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 <title>{{site_config.site_name}}</title>
 <link rel="shortcut icon" type="image/png" href="{% static 'img/logos/favicon.ico' %}"/>
 <!-- Stylesheet -->
-<link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="http://192.168.88.1:85/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="/static/css/jquery-ui.min.css" rel="stylesheet" type="text/css">
 <link href="/static/css/animate.css" rel="stylesheet" type="text/css">
 <link href="/static/css/css-plugin-collections.css" rel="stylesheet"/>
