--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <!-- Meta Tags -->
 <meta name="viewport" content="width=device-width,maximum-scale=1,user-scalable=no"/>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+<!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
 <meta name="description" content="{{site_config.texto_corto_proposito}}" />
 <meta name="author" content="SIMAS - CFCA" />
 
@@ -20,7 +20,7 @@
 <title>{{site_config.site_name}}</title>
 <link rel="shortcut icon" type="image/png" href="{% static 'img/logos/favicon.ico' %}"/>
 <!-- Stylesheet -->
-<link href="http://192.168.88.1:85/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="/static/css/jquery-ui.min.css" rel="stylesheet" type="text/css">
 <link href="/static/css/animate.css" rel="stylesheet" type="text/css">
 <link href="/static/css/css-plugin-collections.css" rel="stylesheet"/>
