--- a/templates/base.html
+++ b/templates/base.html
@@ -137,7 +137,41 @@
                     <nav id="menuzord-right" class="menuzord default no-bg">
                         <a class="menuzord-brand pull-left flip" href="/"><img src="/static/img/logos/logo-wide2.png" alt=""></a>
                         <div id="side-panel-trigger" class="side-panel-trigger visible-xs visible-sm sr-only"><a href="#">Temas <i class="fa fa-bars font-22"></i></a></div>
-                        
+                        <ul class="menuzord-menu">
+                            
+                            <!-- <li>
+                                <a href="/lista-noticias/">Informáte</a>
+                                <div class="megamenu">
+                                    <div class="megamenu-row">
+                                        <div class="col3">
+                                            <ul class="list-unstyled list-dashed">
+                                                <li>
+                                                    <h5 class="pl-10"><strong>Categorias:</strong></h5>
+                                                </li>
+                                                <li><a href="#">Categoria</a></li>
+                                                <li><a href="#">Categoria</a></li>
+                                                <li><a href="#">Categoria</a></li>
+                                                <li><a href="#">Categoria</a></li>
+                                                
+                                            </ul>
+                                        </div>
+                                        <div class="col5">
+                                            <h5 class=""><strong>Noticias destacadas:</strong></h5>
+                                            
+
+                                        </div>
+                                        <div class="col4">
+                                            <h5 class=""><strong>Últimas noticias:</strong></h5>
+                                            <div class="list-dashed">
+                                                
+                                            </div>
+                                            <a href="/lista-noticias/">Descubra más noticias</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li> -->
+                            <li class="menu3"><a href="/">Aprende</a></li>
+                        </ul>
                     </nav>
                 </div>
             </div>
