--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,6 @@
-
-
-{% load  static %}
 {% load thumbnail %}
+{% load solo_tags static %}
+{% get_solo 'configuracion.SiteConfiguration' as site_config %}
 
 <!DOCTYPE html>
 <html dir="ltr" lang="es">
@@ -104,7 +103,7 @@
                     <div class="col-md-8">
                         <div class="widget no-border m-0">
                             <div id="google_translate_element"></div>
-                            <script type="text/javascript">
+                            <!--<script type="text/javascript">
                                 function googleTranslateElementInit() {
                                  new google.translate.TranslateElement({
                                         pageLanguage: 'es',
@@ -114,7 +113,7 @@
                                         );
                                     }
                             </script>
-                            <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+                            <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>-->
                         </div>
                     </div>
                     <div class="col-md-4">
