--- a/templates/base.html
+++ b/templates/base.html
@@ -49,14 +49,14 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146655946-1"></script>
-<script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146655946-1"></script>-->
+<!--<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-146655946-1');
-</script>
+</script>-->
 
 </head>
 <body class="has-side-panel side-panel-left fullwidth-page">
