--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load thumbnail %}
+{% load compress %}
 {% load solo_tags static %}
 {% get_solo 'configuracion.SiteConfiguration' as site_config %}
 
@@ -17,6 +18,7 @@
 
 <!-- Page Title -->
 <title>{{site_config.site_name}}</title>
+{% compress css %}
 <link rel="shortcut icon" type="image/png" href="{% static 'img/logos/favicon.ico' %}"/>
 <!-- Stylesheet -->
 <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -42,6 +44,7 @@
 {% endblock extra_css %}
 
 <link href="/static/css/style.css" rel="stylesheet" type="text/css">
+{% endcompress %}
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -290,6 +293,7 @@
 </div>
 
 <!-- external javascripts -->
+{% compress js %}
 <script src="/static/js/jquery-2.2.4.min.js"></script>
 <script src="/static/js/stylinggt.js"></script>
 <script src="/static/js/example.js"></script>
@@ -310,5 +314,6 @@
 <script src="/static/js/custom.js"></script>
 
 {% block extra_js %}{% endblock extra_js %}
+{% endcompress %}
   </body>
 </html>
