--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 <head>
 
 <!-- Meta Tags -->
-<meta name="viewport" content="width=device-width,maximum-scale=1,user-scalable=no"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
 <meta name="description" content="{{site_config.texto_corto_proposito}}" />
