--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load thumbnail %}
+{% load compress %}
 {% load solo_tags static %}
 {% get_solo 'configuracion.SiteConfiguration' as site_config %}
 
@@ -19,6 +20,7 @@
 <title>{{site_config.site_name}}</title>
 
 <link rel="shortcut icon" type="image/png" href="{% static 'img/logos/favicon.ico' %}"/>
+{% compress css %}
 <!-- Stylesheet -->
 <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="/static/css/jquery-ui.min.css" rel="stylesheet" type="text/css">
@@ -26,42 +28,16 @@
 <link href="/static/css/css-plugin-collections.css" rel="stylesheet"/>
 <!-- CSS | menuzord megamenu skins -->
 <link id="menuzord-menu-skins" href="/static/css/menuzord-skins/menuzord-rounded-boxed.css" rel="stylesheet"/>
-<!-- CSS | Main style file -->
-<link href="/static/css/style-main.css" rel="stylesheet" type="text/css">
 <!-- CSS | Custom Margin Padding Collection -->
 <link href="/static/css/custom-bootstrap-margin-padding.css" rel="stylesheet" type="text/css">
 <!-- CSS | Responsive media queries -->
 <link href="/static/css/responsive.css" rel="stylesheet" type="text/css">
-<!-- CSS | Style css. This is the file where you can place your own custom css code. Just uncomment it and use it. -->
-<!-- <link href="/static/css/style.css" rel="stylesheet" type="text/css"> -->
-
-<!-- CSS | Theme Color -->
-<link href="/static/css/color/theme-skin-blue.css" rel="stylesheet" type="text/css">
 <link href="/static/css/fontawesome/v4-shims.min.css" rel="stylesheet" type="text/css">
 {% block extra_css %}
 
 {% endblock extra_css %}
+<!-- CSS | Main style file -->
 
-<link href="/static/css/style.css" rel="stylesheet" type="text/css">
-
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146655946-1"></script>-->
-<!--<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-146655946-1');
-</script>-->
-
-</head>
-<body class="has-side-panel side-panel-left fullwidth-page">
 <style>
 .goog-te-gadget-simple{
     background: white !important;
@@ -96,6 +72,30 @@
     border: none !important;
 }
 </style>
+{% endcompress %}
+
+<link href="/static/css/style-main.css" rel="stylesheet" type="text/css">
+<link href="/static/css/color/theme-skin-blue.css" rel="stylesheet" type="text/css">
+<link href="/static/css/style.css" rel="stylesheet" type="text/css">
+
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146655946-1"></script>-->
+<!--<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-146655946-1');
+</script>-->
+
+</head>
+<body class="has-side-panel side-panel-left fullwidth-page">
 <div id="wrapper" class="clearfix">
     <!-- Header -->
     <header class="header">
@@ -291,6 +291,9 @@
     <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
 </div>
 
+
+
+{% compress js %}
 <!-- external javascripts -->
 <script src="/static/js/jquery-2.2.4.min.js"></script>
 <script src="/static/js/stylinggt.js"></script>
@@ -312,5 +315,6 @@
 <script src="/static/js/custom.js"></script>
 
 {% block extra_js %}{% endblock extra_js %}
+{% endcompress %}
   </body>
 </html>
